[package]
name = "explain"
version = "0.1.0"
authors = ["bjoblot"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
anyhow = "1.0"
aries_utils = { git = "https://github.com/arthur-bit-monnot/aries" }
aries_model = { git = "https://github.com/arthur-bit-monnot/aries" }
aries_planning = { git = "https://github.com/arthur-bit-monnot/aries" }
aries_planners = { git = "https://github.com/arthur-bit-monnot/aries" }
nalgebra= "0.21.1"
